--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,10 @@ body {
           box-shadow: 0 0 5px 2px red, 0 0 10px 4px orange, 0 0 15px 6px yellow, 0 0 20px 8px lightgreen, 0 0 25px 10px lightblue, 0 0 30px 12px magenta;
 }
 
+.header .header__btn:active {
+  background-color: #00f;
+}
+
 .color-board {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
