--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,13 +54,7 @@ body {
         &:hover {
             background-color: transparent;
             color: white;
-            border-radius: 50%;
-            box-shadow: 0 0 5px 2px red,
-                0 0 10px 4px orange,
-                0 0 15px 6px yellow,
-                0 0 20px 8px lightgreen,
-                0 0 25px 10px lightblue,
-                0 0 30px 12px magenta;
+            border-radius: 50px;
         }
 
         &:active {
