--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,96 +1,96 @@
-$defult-font: 'Roboto Mono',
+$defult-font: "Roboto Mono",
 monospace;
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 10px;
-    font-family: $defult-font, sans-serif;
+  font-size: 10px;
+  font-family: $defult-font, sans-serif;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    max-width: 1920px;
-    height: 100vh;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  max-width: 1920px;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .header {
-    padding-bottom: 20px;
-    background-color: rgb(110, 100, 255);
+  padding-bottom: 20px;
+  background-color: rgb(110, 100, 255);
 
-    .header__title {
-        padding: 20px 0;
-        font-size: 5rem;
-        text-align: center;
-        letter-spacing: 20px;
-
-        @media (max-width: 1400px) {
-            letter-spacing: 10px;
-        }
-
-        @media (max-width: 800px) {
-            letter-spacing: 0px;
-        }
-    }
-
-    .header__btn {
-        display: block;
-        margin: 0 auto;
-        padding: 10px 40px;
-        font-size: 3rem;
-        font-family: $defult-font;
-        outline: none;
-        border: 1px solid black;
-        background-color: rgb(145, 137, 255);
-        transition: .1s;
-        cursor: pointer;
-
-        &:hover {
-            background-color: transparent;
-            color: white;
-            border-radius: 50px;
-        }
-
-        &:active {
-            background-color: #00f;
-        }
-    }
-}
-
-.color-board {
-    flex-grow: 1;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+  .header__title {
+    padding: 20px 0;
+    font-size: 5rem;
+    text-align: center;
+    letter-spacing: 20px;
 
     @media (max-width: 1400px) {
-        grid-template-columns: repeat(4, 1fr);
+      letter-spacing: 10px;
     }
 
     @media (max-width: 800px) {
-        grid-template-columns: repeat(3, 1fr);
+      letter-spacing: 0px;
+    }
+  }
+
+  .header__btn {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 40px;
+    font-size: 3rem;
+    font-family: $defult-font;
+    outline: none;
+    border: 1px solid black;
+    background-color: rgb(145, 137, 255);
+    transition: 0.1s;
+    cursor: pointer;
+
+    &:hover {
+      background-color: transparent;
+      color: white;
+      border-radius: 50px;
     }
 
-    & div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 3rem;
-        font-weight: bold;
-        color: white;
-        text-shadow: 0 0 5px #000;
-
-        @media (max-width: 1400px) {
-            font-size: 2.5rem;
-        }
-
-        @media (max-width: 800px) {
-            font-size: 2rem;
-        }
+    &:active {
+      background-color: #00f;
     }
+  }
+}
+
+.color-board {
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+
+  @media (max-width: 1400px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media (max-width: 800px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  & div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    font-weight: bold;
+    color: white;
+    text-shadow: 0 0 5px #000;
+
+    @media (max-width: 1400px) {
+      font-size: 2.5rem;
+    }
+
+    @media (max-width: 800px) {
+      font-size: 2rem;
+    }
+  }
 }
